--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ runner = '1.4.0'
 uiautomator = '2.3.0-alpha02'
 ktLint = '0.36.0'
 ktLint-reporter = '0.48.2'
+baseline-profile = '1.3.0'
 
 [libraries]
 # project classpath
@@ -66,6 +67,7 @@ junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit_ext" }
 junit-macroBenchmark = { module = "androidx.benchmark:benchmark-macro-junit4", version.ref = "junit_macro" }
 testRunner = { module = "androidx.test:runner", version.ref = "runner" }
 uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
+baseline-profile = { module = "androidx.profileinstaller:profileinstaller", version.ref = "baseline-profile" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 
 room-ktx = { module = "androidx.room:room-ktx", version.ref ="room"}
