--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 # project classpath
 build_gradle = "7.4.2"
 kotlin_gradle = "1.8.10"
+google_services = "4.3.15"
 hilt = "2.45"
 
 # project modules
@@ -22,18 +23,21 @@ junit = '4.13.2'
 junit_ext = '1.1.5'
 junit_macro = '1.1.1'
 espresso = '3.5.1'
+barista = '4.3.0'
 mockitoKotlin = '2.2.0'
 runner = '1.4.0'
 uiautomator = '2.3.0-alpha02'
 ktLint = '0.36.0'
 ktLint-reporter = '0.48.2'
 baseline-profile = '1.3.0'
+firebase_bom = '31.5.0'
 
 [libraries]
 # project classpath
 buildGradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "build_gradle" }
 kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin_gradle" }
 hiltPlugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
+googleServicesPlugin = { module = "com.google.gms:google-services", version.ref = "google_services" }
 
 # project modules
 androidX-core = { module = "androidx.core:core-ktx", version.ref = "androidx_core" }
@@ -69,6 +73,11 @@ testRunner = { module = "androidx.test:runner", version.ref = "runner" }
 uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
 baseline-profile = { module = "androidx.profileinstaller:profileinstaller", version.ref = "baseline-profile" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+espresso-barista = { module = "com.adevinta.android:barista", version.ref = "barista" }
+espresso-barista-compose = { module = "com.adevinta.android:barista-compose", version.ref = "barista" }
 
 room-ktx = { module = "androidx.room:room-ktx", version.ref ="room"}
 room-compiler = { module = "androidx.room:room-compiler", version.ref ="room"}
+
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase_bom" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
