--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,8 @@ ktLint = '0.36.0'
 ktLint-reporter = '0.48.2'
 baseline-profile = '1.3.0'
 firebase_bom = '31.5.0'
+hilt-testing = '2.44'
+ar-core = '1.30.0'
 
 [libraries]
 # project classpath
@@ -62,6 +64,8 @@ compose-destination-ksp = { module = "io.github.raamcosta.compose-destinations:k
 
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 
 ktLint = { module = "com.pinterest:ktlint", version.ref = "ktLint" }
 ktLint-reporter = { module = "com.pinterest.ktlint:ktlint-reporter-html", version.ref = "ktLint-reporter" }
@@ -81,3 +85,5 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase_bom" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
+
+ar-core = { module = "com.google.ar:core", version.ref = "ar-core" }
