--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -11,35 +11,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-
-      - name: Download KtLint
-        run: |
+    - uses: actions/checkout@v3
+    - name: set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
+    - name: Download KtLint
+      run: |
           curl -sSLO https://github.com/pinterest/ktlint/releases/download/<VERSION>/ktlint
           chmod a+x ktlint
 
-      - name: Run KtLint
-        run: ./ktlint --reporter=checkstyle --color src/**/*.kt > ktlint.xml || true
+    - name: Run KtLint
+      run: ./ktlint --reporter=checkstyle --color src/**/*.kt > ktlint.xml || true
 
-      - name: Upload KtLint report
-        uses: actions/upload-artifact@v2
-        with:
+    - name: Upload KtLint report
+      uses: actions/upload-artifact@v2
+      with:
           name: ktlint-report
           path: ktlint.xml
 
-      - name: Reviewdog
-        uses: reviewdog/action-setup@v1
-        with:
+    - name: Reviewdog
+      uses: reviewdog/action-setup@v1
+      with:
           reviewdog_version: latest
 
-      - name: Analyze KtLint report
-        run: cat ktlint.xml | reviewdog -f=checkstyle -name="KtLint" -reporter=github-pr-review -level=warning
-        env:
+    - name: Analyze KtLint report
+      run: cat ktlint.xml | reviewdog -f=checkstyle -name="KtLint" -reporter=github-pr-review -level=warning
+      env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_TOKEN }}
 
