--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
