--- a/.github/workflows/aws-device-farm.yml
+++ b/.github/workflows/aws-device-farm.yml
@@ -3,9 +3,10 @@ name: AWS Device Farm CI
 on:
   push:
     branches:
-      [ "master", main, draft ]
+      - master
   pull_request:
-    branches: [ "master", main, draft ]
+    branches:
+      - master
 
 jobs:
   build_and_test:
@@ -24,34 +25,22 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Set up Android SDK
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          script: echo "Android SDK is set up"
+      - name: Build and run instrumented tests
+        run: ./gradlew build connectedDebugAndroidTest
 
-      - name: Start Android Emulator
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          script: echo "Android Emulator is started"
-
-      - name: Build and run tests
-        run: ./gradlew build connectedAndroidTest
-
-      - name: Zip test results
-        if: always()
+      - name: Upload APK and test APK to AWS Device Farm
         run: |
-          if [ -d "./app/build/outputs/androidTest-results/connected" ]; then
-            zip -r test-results.zip ./app/build/outputs/androidTest-results/connected
-          else
-            echo "No test results found."
-            touch test-results.zip
-          fi
+          export APK_PATH=$(find . -type f -name "*.apk" | grep "/release/" | head -n 1)
+          export TEST_APK_PATH=$(find . -type f -name "*-androidTest.apk" | head -n 1)
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          export UPLOAD_URL=$(aws devicefarm create-upload --project-arn ${{ secrets.AWS_DEVICE_FARM_PROJECT_ARN }} --name MyApp.apk --type ANDROID_APP | jq -r '.upload.url')
+          curl -T $APK_PATH $UPLOAD_URL
+          export UPLOAD_URL=$(aws devicefarm create-upload --project-arn ${{ secrets.AWS_DEVICE_FARM_PROJECT_ARN }} --name MyAppTests.apk --type ANDROID_INSTRUMENTATION_TEST_PACKAGE | jq -r '.upload.url')
+          curl -T $TEST_APK_PATH $UPLOAD_URL
 
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: test-results.zip
+      - name: Schedule and run tests on AWS Device Farm
+        run: |
+          export DEVICE_POOL=$(aws devicefarm list-device-pools --arn ${{ secrets.AWS_DEVICE_FARM_PROJECT_ARN }} --type PRIVATE | jq -r '.devicePools[0].arn')
+          export SCHEDULE_RUN_RESULT=$(aws devicefarm schedule-run --project-arn ${{ secrets.AWS_DEVICE_FARM_PROJECT_ARN }} --app-arn ${{ secrets.AWS_DEVICE_FARM_APP_ARN }} --device-pool-arn $DEVICE_POOL --name "My GitHub CI Run" --test type=ANDROID_INSTRUMENTATION,testPackageArn=${{ secrets.AWS_DEVICE_FARM_TEST_PACKAGE_ARN }}')
+          export SCHEDULED_RUN_ARN=$(echo $SCHEDULE_RUN_RESULT | jq -r '.run.arn')
+          echo "Scheduled run ARN: $SCHEDULED_RUN_ARN"
