--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,38 +4,14 @@ version: 2.1
 orbs:
   android: circleci/android@x.y.z
   # https://circleci.com/developer/orbs/orb/circleci/android for latest version
-jobs:
-  test:
-    executor:
-      name: android/android-machine
-      resource-class: large
-    steps:
-      - checkout
-      # Create an AVD named "myavd"
-      - android/create-avd:
-          avd-name: myavd
-          system-image: system-images;android-29;default;x86
-          install: true
-      # By default, after starting up the emulator, a cache will be restored,
-      # "./gradlew assembleDebugAndroidTest" will be run and then a script
-      # will be run to wait for the emulator to start up.
-      # Specify the "post-emulator-launch-assemble-command" command to override
-      # the gradle command run, or set "wait-for-emulator" to false to disable
-      # waiting for the emulator altogether.
-      - android/start-emulator:
-          avd-name: myavd
-          no-window: true
-          restore-gradle-cache-prefix: v1a
-      # Runs "./gradlew connectedDebugAndroidTest" by default.
-      # Specify the "test-command" parameter to customize the command run.
-      - android/run-tests
-      - android/save-gradle-cache:
-          cache-prefix: v1a
-  -
 workflows:
   test:
     jobs:
-      - test
+      # This job uses the Android machine image by default
+      - android/run-ui-tests:
+          # Use pre-steps and post-steps if necessary
+          # to execute custom steps before and afer any of the built-in steps
+          system-image: system-images;android-29;default;x86
       - build_and_test:
         runs-on: ubuntu-latest
 
